# mlir_toy

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: MLIR.cmake
src/: CMakeLists.txt  toy_dialect.h
src/Ch1/: CMakeLists.txt  toyc.cpp
src/Ch1/include/toy/: AST.h  Lexer.h  Parser.h
src/Ch1/parser/: AST.cpp
tests/: transpose.mlir
